@startuml WalletClassDiagram

!theme plain
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 80

left to right direction

' ════════════════════════════════════════════════════════════════════════════════════
' CONTROLLER LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class WalletController {
}

' ════════════════════════════════════════════════════════════════════════════════════
' GUARD LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class AuthGuard {
}

' ════════════════════════════════════════════════════════════════════════════════════
' DTO LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class CreateWalletDto {
}

class UpdateWalletDto {
}

' ════════════════════════════════════════════════════════════════════════════════════
' SERVICE LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class WalletService {
}

class DataSource {
}

' ════════════════════════════════════════════════════════════════════════════════════
' ENTITY LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class Wallet {
}

class WalletTransaction {
}

class Bank {
}

class User {
}

class WithdrawalRequest {
}

' ════════════════════════════════════════════════════════════════════════════════════
' RELATIONSHIPS
' ════════════════════════════════════════════════════════════════════════════════════

WalletController --> AuthGuard
WalletController --> CreateWalletDto
WalletController --> UpdateWalletDto
WalletController --> WalletService

WalletService --> DataSource
WalletService --> Wallet
WalletService --> Bank
WalletService --> WalletTransaction

Wallet --> User
Wallet --> Bank
Wallet --> WalletTransaction
Wallet --> WithdrawalRequest

WalletTransaction --> Wallet

@enduml
